Added decimal places

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
     "private": true,
     "scripts": {
         "build": "nuxt build",
-        "dev": "nuxt dev --port=3038",
+        "dev": "nuxt dev --port=3038 --dotenv ../.env",
         "start": "npm i && NODE_NO_WARNINGS=1 nuxt build --dotenv ../.env && PORT=3038 node .output/server/index.mjs",
         "postinstall": "nuxt prepare"
     },
